# nomad-events-logger

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  example-nomad-job.hcl  shell.nix
.github/workflows/: push_main.yml
src/: main.rs
