[package]
name = "nomad-events-logger"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.3.4", features = ["derive"] }
nomad-client-rs = "0.9.1"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
